--- a/exercise1.html
+++ b/exercise1.html
@@ -18,6 +18,8 @@
 
         <p>I am a paragraph I should be blue, Helvetica, size 16px.</p>
 
+        <p>I am the About Page</p>
+
         <ol>
             <li>This is an ordered list.</li>
             <li>All items in this list should have a teal background.</li>
